fix some layout bugs

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,11 @@
 .footer {
   width: 100%;
-  display: flex;
   flex-shrink: 0;
+
+  display: flex;
   padding: 67px 0 60px 0;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 800px) {
