--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
   width: 100%;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 800px) {
